--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,7 +16,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
-  "homepage": "",
+  "homepage": "https://yanelricarte.github.io/proyecto_react/",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
